--- a/index.html
+++ b/index.html
@@ -333,17 +333,55 @@
                                         <!--img src="images/movie-database.jpg" alt="movie-database" 
                                         class="center-block"-->
                                         <div class="project-caption">
+                                            <h2>M for Music</h2>
+                                            <h4><span>Skills: </span>Angular 2, Node.js, Express.JS, Bootstrap, MongoDB</h4>
+                                            <p>Music fills the soul!! Well join M for Music and talk about music and discover new 
+                                                and old artists who are non-mainstream. You can share links from music applications 
+                                                such as Spotify
+                                            </p>
+                                            <div class="btn btn-view"
+                                            onclick="window.open('https://social-media-blog.herokuapp.com/messages', '_blank')">View</div>
+                                        </div>
+                                    </div>
+                                    <div class="item active text-center">
+                                        <!--img src="images/movie-database.jpg" alt="movie-database" 
+                                        class="center-block"-->
+                                        <div class="project-caption">
+                                            <h2>GoCamping</h2>
+                                            <h4><span>Skills: </span>Node.js, Express.JS, Bootstrap, JQuery, MongoDB</h4>
+                                            <p>A website for outdoor adventurers and fun-loving enthusiasts to find camping sites
+                                                across the United States and join in on adventures
+                                            </p>
+                                            <div class="btn btn-view"
+                                            onclick="window.open('https://boiling-springs-54956.herokuapp.com', '_blank')">View</div>
+                                        </div>
+                                    </div>
+                                    <div class="item active text-center">
+                                        <!--img src="images/movie-database.jpg" alt="movie-database" 
+                                        class="center-block"-->
+                                        <div class="project-caption">
                                             <h2>Movie Collection Database</h2>
-                                            <h4><span>Skills: </span>Angular 2, Node.js, JavaScript, Bootstrap, JQuery</h4>
-                                            <p>Designed web application enabling users to create an account and
-                                                login to add their collection of movies and TV series,
-                                                    mark them as favorites or provide their reviews and read other user's
-                                                    reviews
+                                            <h4><span>Skills: </span>Angular 2, JavaScript, Bootstrap, JQuery</h4>
+                                            <p>Are you a movie buff? Join our website and post your reviews and add movies to your 
+                                                to-watch list!! Connect with people and learn more about different movies
                                             </p>
                                             <div class="btn btn-view"
                                             onclick="window.open('https://github.com/abhipillai/Movies-Collection-Database', '_blank')">View</div>
                                         </div>
                                     </div>
+                                    <div class="item text-center">
+                                            <!--img src="images/rec.jpg" alt="recession" 
+                                            class="center-block"-->
+                                            <div class="project-caption">
+                                                <h2>RentalsCo</h2>
+                                                <h4><span>Skills: </span>ASP>NET Web API, JavaScript, Bootstrap, Entity Framework</h4>
+                                                <p>Enjoy movies? Then look no further than RentalsCo. Providers of high quality 
+                                                    movies and TV series at a fair price. Membership Perks include online rentals 
+                                                    and streaming options
+                                                </p>
+                                                <div class="btn btn-view" onclick="window.open('https://github.com/abhipillai/Data-analysis', '_blank')">View</div>
+                                            </div>
+                                        </div>
                                     <div class="item text-center">
                                         <!--img src="images/pepsico.jpg" alt="PepsiCo" 
                                         class="center-block"-->
